# jace

./: .gitignore  .luarc.json  Cargo.toml  README.md  build.zig  build.zig.zon  devenv.nix  devenv.yaml  dune-project  jace.opam  tags
combinator/: Cargo.toml
combinator/src/: comb.rs  error.rs  input.rs  lib.rs  parser.rs
combo/: dune
examples/: 1.jc  2.jc  3.jc  4.jc  5.jc  6.jc  example.lua  example2.jc  example2.lua  hello_world.jc  option_and_either.jc  option_and_tuple.jc  simple.lua  something.jc
jace/: Cargo.toml
jace/src/: cli.rs  err.rs  main.rs
jace/src/parser/: combinator.rs  def.rs  parser.rs
lua/: example.lua  init.lua
src/: dune  err.rs  jace_file.rs  lexer.rs  main.rs  main.zig
src/codegen/: emitter.rs  mod.rs  visitor.rs
src/common/: code.ml  code.mli  diagnostic.mli  env.ml  env.mli  location.ml  location.mli  span.ml  span.mli
src/jace/: ast.mli  lexer.ml  lexer.mli  parser.ml  parser.mli  pratt.ml  pratt.mli  token.mli
src/lexer/: lexer.rs  lexer.zig  mod.rs  tests.rs  token.rs
src/parser/: ast.rs  atom.rs  combinator.rs  def.rs  error.rs  expr.rs  mod.rs  old.rs  parser.rs  pratt.rs  ptr.rs  state.rs  stmt.rs  tests.rs  token.rs  tokenstream.rs  typeparam.rs
src/typecheck/: mod.rs  type.rs
test/: dune  lexer.ml  parser.ml
