cargo-features = ["edition2024"]

[package]
name = "jace"
version = "0.1.0"

edition.workspace = true
authors.workspace = true

[dependencies]
combinator = { path = "../combinator" }

thiserror = "2"
mlua = { version = "0.10", features = ["lua54", "vendored"] }
clap = { version = "4.5.28", features = ["derive"] }
miette = { version = "7.5.0", features = ["fancy"] }

